--- a/styles.scss
+++ b/styles.scss
@@ -1709,7 +1709,8 @@ button:focus {
 
 		.container {
 			position: absolute;
-   		top: -66px;
+			top: -66px;
+			z-index: 1;
 		}
 
 		&__wrapper-gallery {
@@ -1914,6 +1915,7 @@ button:focus {
 	.design {
 		padding-top: 170px;
 		background-color: $dark-bg;
+		padding-bottom: 190px;
 
 		.header-section {
 			font-size: 22px;
@@ -1963,6 +1965,7 @@ button:focus {
 .steps {
 	margin-top: -1px;
 	background-color: $dark-bg;
+	padding-bottom: 500px;
 
 	.container {
 		display: flex;
@@ -2038,6 +2041,7 @@ button:focus {
 
 	&__slider {
 		max-width: 63%;
+		position: relative;
 	}
 
 	&__list {
@@ -2098,5 +2102,462 @@ button:focus {
 	&__slider-fotos {
 		list-style: none;
 		padding-left: 0;
+	}
+
+	&__slider-item  img {
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+
+	&__nav {
+		position: absolute;
+		bottom: 110px;
+    left: -50%;
+	}
+
+	&__nav-list {
+		width: 145px;
+		padding: 0;
+		margin: 0;
+		list-style: none;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__nav-list::before {
+		content: "";
+		width: 43px;
+		height: 14px;
+		background-image: url("./assets/images/projects-left-arrow.svg");
+		background-repeat: no-repeat;
+		background-position: 0 0;
+		position: absolute;
+		top: 2px;
+    left: -72px;
+	}
+
+	&__nav-list::after {
+		content: "";
+		width: 43px;
+		height: 14px;
+		background-image: url("./assets/images/projects-right-arrow.svg");
+		background-repeat: no-repeat;
+		background-position: 0 0;
+		position: absolute;
+		top: 2px;
+    right: -73px;
+	}
+
+	&__nav-button {
+		padding: 0;
+		border: 0;
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		background-color: rgba(255, 255, 255, 0.3);
+		transition: all 0.3s;
+	}
+
+	&__nav-button:hover:not(.steps__nav-button_current),
+	&__nav-button:focus:not(.steps__nav-button_current) {
+		transform: scale(1.4);
+	 	background-color: $main-color;
+	}
+
+	&__nav-button_current {
+		background-color: $text-color;
+	}
+}
+
+@media (max-width: 1200px) {
+		.steps__nav {
+			left: -45%;
+		}	
+}
+
+@media (max-width: 1120px) {
+	.steps {
+		padding-bottom: 0;
+	}
+}
+
+@media (max-width: 1100px) {
+	.steps__nav {
+		bottom: 70px;
+	}
+}
+
+@media (max-width: $large) {
+	.steps {
+		padding-bottom: 30px;
+	}
+
+	.steps__nav {
+		bottom: 0;
+		position: static;
+	}
+
+	.steps__nav-list {
+		position: relative;
+	}
+}
+
+@media (max-width: 860px) {
+	.steps {
+
+		.container {
+			flex-direction: column;
+		}
+		
+		&__wrapper,
+		&__slider {
+			max-width: 100%;
+		}
+
+		&__slider {
+			padding-bottom: 40px;
+		}
+
+		&__wrapper {
+			text-align: center;
+		}
+
+		&__header,
+		&__slogan {
+			transform: none;
+		}
+
+		&__header {
+			margin-bottom: 0;
+		}
+
+		&__header::after {
+			display: none;
+		}
+
+		&__number {
+			margin-top: 15px;
+		}
+
+	  &__list {
+			text-align: center;
+		}
+
+		&__link {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
+
+		&__nav {
+			position: relative;
+			bottom: initial;
+			left: initial;
+		}
+
+		&__nav-list {
+			position: relative;
+			margin: 0 auto;
+		}
+
+		&__item {
+			justify-self: center;
+		}
+	}
+}
+
+@media (max-width: 700px) {
+	.steps__list {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media (max-width: 500px) {
+	.steps {
+		display: none;
+	}
+}
+
+// end Steps
+// start Team
+
+.team {
+	position: relative;
+	height: 500px;
+
+	.container {
+		position: relative;
+		top: -400px;
+	}
+
+	.header-section {
+		margin-top: 0;
+		margin-bottom: 12px;
+		color: $text-color;
+	}
+
+	.header-icon {
+		margin-bottom: 20px;
+	}
+
+	&__slogan {
+		max-width: 480px;
+		margin: 0 auto;
+		margin-bottom: 70px;
+		font-family: "FuturaBookC";
+		font-size: 20px;
+		line-height: 27px;
+		text-align: center;
+		color: $text-color;
+	}
+
+	&__list {
+		max-width: 1030px;
+		margin: 0 auto;
+		padding: 0;
+		list-style: none;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__item {
+		position: relative;
+	}
+
+	&__item:first-child::before {
+		content: "";
+		width: 70px;
+		height: 70px;
+		position: absolute;
+		top: -35px;
+    left: -35px;
+		background: $main-color;
+		box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5);
+		background-image: url("../assets/images/team-icon1.svg");
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+
+	&__item:nth-child(2)::before {
+		content: "";
+		width: 70px;
+		height: 70px;
+		position: absolute;
+		top: -35px;
+    left: -35px;
+		background: $main-color;
+		box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5);
+		background-image: url("../assets/images/team-icon2.svg");
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+
+	&__item:last-child::before {
+		content: "";
+		width: 70px;
+		height: 70px;
+		position: absolute;
+		top: -35px;
+    left: -35px;
+		background: $main-color;
+		box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5);
+		background-image: url("../assets/images/team-icon3.svg");
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+
+	&__name {
+		margin-bottom: 0;
+		margin-top: 0;
+		padding-top: 20px;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 18px;
+		line-height: 25px;
+		text-align: center;
+		color: $dark-bg;
+		background-color: $text-color;
+	}
+
+	&__position {
+		margin-top: 0;
+		margin-bottom: 0;
+		padding-bottom: 20px;
+		font-family: "FuturaBookC";
+		font-size: 18px;
+		line-height: 26px;
+		text-align: center;
+		color: #959595;
+		background-color: $text-color;
+	}
+
+	&__experience {
+		margin-top: 0;
+		padding: 12px 20px;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 13px;
+		line-height: 20px;
+		text-align: center;
+		text-transform: uppercase;
+		color: $text-color;
+		background-color: $main-color;
+	}
+
+	&__wrapper {
+		position: absolute;
+    width: 80%;
+		bottom: -65px;
+		left: 20px;
+		background-color: $text-color;
+	}
+
+	&__text {
+		position: relative;
+		max-width: 560px;
+		margin: 120px auto 90px;
+		font-family: "FuturaBookC";
+		font-size: 20px;
+		line-height: 34px;
+		text-align: center;
+		color: #363636;
+	}
+
+	&__text::before {
+		content: "";
+		width: 55px;
+		height: 2px;
+		position: absolute;
+		left: 50%;
+		top: -20px;
+		transform: translateX(-50%);
+		background-color: $main-color;
+	}
+}
+
+@media (max-width: 1120px) {
+	.team {
+		padding-top: 20px;
+		height: auto;
+	
+		.container {
+			top: initial;
+		}
+
+		.header-section,
+		&__slogan {
+			color: $dark-bg;
+		}
+
+		&__list {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+
+		&__item {
+			width: 35%;
+		}
+		&__item img {
+			display: block;
+			width: 100%;
+			height: auto;
+		}
+
+		&__item:last-child {
+			margin-top: 100px;
+		}
+
+		&__item:first-child {
+			margin-right: 45px;
+		}
+
+		&__wrapper {
+			left: 50%;
+    	transform: translateX(-50%);
+		}
+	}
+}
+
+@media (max-width: 800px) {
+	.team {
+
+		&__list {
+			flex-direction: column;
+			align-items: center;
+		}
+
+		&__item {
+			width: 45%;
+			margin: 0;
+		}
+
+		&__item:first-child {
+			margin-right: 0;
+		}
+
+		&__item:last-child {
+			margin-top: 0;
+		}
+
+		&__item + &__item {
+			margin-top: 100px;
+		}
+	}
+}
+
+@media (max-width: 800px) {
+	.team__item {
+		width: 65%;
+	}
+}
+
+@media (max-width: 375px) {
+	.team {
+		background-color: $dark-bg;
+
+		.header-section,
+		&__slogan {
+			color: $text-color;
+		}
+
+		.header-section {
+			font-size: 22px;
+			line-height: 30px;
+		}
+
+		&__slogan {
+			font-size: 15px;
+			line-height: 20px;
+		}
+	}
+}
+
+@media (max-width: $extra-small) {
+	.team {
+		padding-bottom: 100px;
+
+		&__list {
+			align-items: flex-end;
+		}
+
+		&__item {
+			width: 90%;
+		}
+
+		&__item + &__item {
+			margin-top: 165px;
+		}
+
+		&__experience {
+			margin-bottom: 0;
+		}
+
+		&__text {
+			display: none;
+		}
 	}
 }
