--- a/styles.scss
+++ b/styles.scss
@@ -2335,7 +2335,7 @@ button:focus {
     left: -35px;
 		background: $main-color;
 		box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5);
-		background-image: url("../assets/images/team-icon1.svg");
+		background-image: url("./assets/images/team-icon1.svg");
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
@@ -2349,7 +2349,7 @@ button:focus {
     left: -35px;
 		background: $main-color;
 		box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5);
-		background-image: url("../assets/images/team-icon2.svg");
+		background-image: url("./assets/images/team-icon2.svg");
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
@@ -2363,7 +2363,7 @@ button:focus {
     left: -35px;
 		background: $main-color;
 		box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5);
-		background-image: url("../assets/images/team-icon3.svg");
+		background-image: url("./assets/images/team-icon3.svg");
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
@@ -2410,7 +2410,7 @@ button:focus {
 
 	&__wrapper {
 		position: absolute;
-    width: 80%;
+    width: 85%;
 		bottom: -65px;
 		left: 20px;
 		background-color: $text-color;
@@ -2559,5 +2559,123 @@ button:focus {
 		&__text {
 			display: none;
 		}
+	}
+}
+
+// end Team
+// start Clients
+
+.clients {
+	.header-section {
+		margin-bottom: 13px;
+	}
+
+	.header-icon {
+		margin-bottom: 10px;
+	}
+
+	&__description {
+		max-width: 350px;
+		margin: 0 auto 40px;
+		font-family: "FuturaBookC";
+		font-size: 20px;
+		line-height: 27px;
+		text-align: center;
+		color: $dark-bg;
+	}
+
+	&__list {
+		padding: 0;
+		list-style: none;
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
+		grid-column-gap: 4%;
+	}
+
+	&__item {
+		position: relative;
+		margin-bottom: 40px;
+		padding: 20px 30px 85px 20px;
+		box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+	}
+
+	&__wrapper {
+		display: flex;
+	}
+
+	&__name {
+		width: 180px;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 18px;
+		line-height: 23px;
+		color: #181818;
+	}
+
+	&__image {
+		margin-right: 20px;
+	}
+
+	&__comment {
+		font-family: "FuturaBookC";
+		font-size: 15px;
+		line-height: 27px;
+		color: #959595;
+	}
+
+	&__thing {
+		background-color: $main-color;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 17px;
+		line-height: 24px;
+		text-transform: uppercase;
+		color: $text-color;
+		display: flex;
+		position: absolute;
+    bottom: -27px;
+	}
+
+	&__metres {
+		position: relative;
+		padding: 15px 25px 15px 65px;
+		border-right: 1px solid $text-color;
+	}
+
+	&__metres::before {
+		content: "";
+		width: 32px;
+		height: 32px;
+		position: absolute;
+		left: 17px;
+    top: 12px;
+		background-image: url("./assets/images/clients-thing-icon-1.svg");
+		background-repeat: no-repeat;
+		background-position: 0 0;
+	}
+
+	&__days {
+		position: relative;
+		padding: 15px 25px 15px 65px;
+	}
+
+	&__days::before {
+		content: "";
+		width: 33px;
+		height: 32px;
+		position: absolute;
+		left: 17px;
+    top: 12px;
+		background-image: url("./assets/images/clients-thing-icon-2.svg");
+		background-repeat: no-repeat;
+		background-position: 0 0;
+	}
+}
+
+@media (max-width: 375px) {
+	.clients {
+		display: none;
 	}
 }
